Refonte du titre

--- a/Global.tex
+++ b/Global.tex
@@ -39,8 +39,8 @@
 	\normalsize{Lycée Jean Bart - Dunkerque\\
 	2011-2012}\\
 	\vspace{15mm}
-  \LARGE{Création d'un serveur WAMPP personnalisé ainsi que sa mise en
-    oeuvre avec une application web d'IdentIt chez un client et mise en
+  \LARGE{Création d'un serveur Web personnalisé ainsi que sa mise en
+    oeuvre avec une application IdentIt chez un client et mise en
     place de Git
     \vspace{15mm}}
 }
@@ -73,10 +73,13 @@
 
 \input{Intro}
 
+% La gestion de version
 \input{Partie1}
 
+% Création d'un serveur IITAMP
 \input{Partie2}
 
+% Mise en oeuvre de IITAMP avec une app IdentIt
 \input{Partie3}
 
 \input{Conclusion}
