Refonte de l'intro pour le stage 2

--- a/Intro.tex
+++ b/Intro.tex
@@ -9,7 +9,7 @@ de première année s'est déroulé du 16 mai 2011 au 8 juillet 2011 dans la
 société \emph{IdentIt} ainsi que mon deuxième stage qui lui s'est
 déroulé du 3 janvier 2012 au 21 février 2012. C'est une SARL\,
 \footnote{\emph{Société À Responsabilité Limitée.}} de quatre personnes
-qui se situe à Petite-Synthe.  \bsc{M.~Dubourg} et \bsc{M.~Lesage} sont
+qui se situe à Petite-Synthe. \bsc{M.~Dubourg} et \bsc{M.~Lesage} sont
 les fondateurs de cette structure, le premier s'occupe de la partie
 technique en tant que chef de projet et le second de la partie gestion
 de l'entreprise. Ils sont accompagnés par deux développeurs, l'un
@@ -23,13 +23,11 @@ référence et aussi de fournir les requêtes permettant cette mise à jour.
 Mon deuxième travail était de mettre en place un nouvel outil de gestion
 de version de code source plus évolué que l'existant.
 
-Le premier jour en entreprise fut un peu spécial pour moi. En effet, mon
-entretien s'étant passé un vendredi après-midi, seuls les gérants de
-l'entreprise étaient présents, du coup cela a été pour moi l'occasion de
-rencontrer les deux développeurs, Cyril\, \footnote{Titulaire d'un BTS
-IG à Jean \bsc{Bart} promotion 2009.} tout juste arrivé dans
-l'entreprise et Ludovic, développeur expérimenté qui a de nombreuses
-années de programmation derrière lui.
+Mon deuxième stage, qui est l'objet de cette note de synthèse, consiste
+à continuer le travail précédent sur le gestionnaire de version puis à
+crée un serveur Web dérivée d'un logiciel libre existant pour ensuite le
+déployer avec une application d'IdentIt chez un client, le tout en
+s'accordant avec le système d'information de l'acquéreur.
 
 Cette note de synthèse suit un plan spécifique, mais les événements ne
 se sont pas passés dans l'ordre réel. En effet, à cause des difficultés
