Retour des titres des chapitres du tutoriel git

--- a/Partie1.tex
+++ b/Partie1.tex
@@ -90,6 +90,17 @@ l'outil dans leur environnement de travail respectif et l'utilisation de
 celui-ci avec le gratuiciel TortoiseGit.  Pour être au plus près des
 problématiques qui pourraient être rencontrées, j'ai conçu l'intégralité
 du guide sous forme de questions et de réponses.
+
+\begin{enumerate}
+  \item Les bases
+  \item Comment mettre en place Git sur Windows~\textregistered ?
+  \item Comment gérer les dépôts Git ?
+  \item Comment utiliser Git ?
+  \item Comment utiliser les branches ?
+  \item Comment consulter l'historique des modifications ?
+  \item Quelle est la méthode de travail ?
+  \item Annexe
+\end{enumerate}
 % section Le tutoriel utilisateur (end)%}}}
 
 \section{Les utilitaires} % (fold)%{{{
