Correction du titre

--- a/Global.tex
+++ b/Global.tex
@@ -1,9 +1,12 @@
 \documentclass[12pt,a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[frenchb]{babel}
-\usepackage{lmodern}
-\usepackage{textcomp}
+%\usepackage{baskervald}
+\usepackage{gfsartemisia}
+%\usepackage{palatino}
+%\usepackage{libertine}
 \usepackage[T1]{fontenc}
+\usepackage{textcomp} % Pour les symboles spéciaux
 \usepackage{listings} % Pour l'ajout de code source
 \usepackage{graphicx} % Pour l'ajout des images
 \usepackage{titlesec} % Pour ne plus avoir le mot chapitre
@@ -40,7 +43,7 @@
 	2011-2012}\\
 	\vspace{15mm}
   \LARGE{Création d'un serveur Web personnalisé ainsi que sa mise en
-    oeuvre avec une application IdentIt chez un client et mise en
+    \oe{}uvre avec une application IdentIt chez un client et mise en
     place de Git
     \vspace{15mm}}
 }
@@ -76,10 +79,10 @@
 % La gestion de version
 \input{Partie1}
 
-% Création d'un serveur IITAMP
+% Création d'IITAMP
 \input{Partie2}
 
-% Mise en oeuvre de IITAMP avec une app IdentIt
+% Mise en oeuvre d'IITAMP
 \input{Partie3}
 
 \input{Conclusion}
