Modification de l'interligne du sommaire

--- a/Global.tex
+++ b/Global.tex
@@ -71,8 +71,7 @@
 \renewcommand{\contentsname}{Sommaire}
 
 % Interligne pour le sommaire
-{\setlength{\baselineskip}{1.2\baselineskip}
-\tableofcontents\par}
+{\setlength{\baselineskip}{2.3\baselineskip}\tableofcontents\par}
 
 \input{Intro}
 
@@ -90,10 +89,12 @@
 % fake annexe
 \appendix
 
-\chapter{Attestation de stage} % (fold)
-\label{cha:Attestation de stage}
+\chapter{Attestation de stages} % (fold)
+\label{cha:Attestations de stages}
+1\iere{} \newpage
+2\ieme{} \newpage
+% chapter Attestations de stages (end)
 
-% chapter Attestation de stage (end)
 \chapter{Intitulé des actions} % (fold)
 \label{cha:Intitulé des actions}
 % chapter Intitulé des actions (end)
