--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -2,18 +2,28 @@
 \label{cha:Conclusion}
 
 \lettrine{L}{a} première chose qui me vient à l'esprit est la
-progression que m'a apporté ce stage. Je peux dire en toute humilité que
-j'en ressors grandi.  L'utilitaire de comparaison m'a donné beaucoup de
-fil à retordre car à chaque fois qu'il fonctionnait, \bsc{M.~Dubourg} me
-poussait à être de plus en plus critique sur ce que je faisais et à
-recommencer en voyant les choses de manière différente.  J'ai pu
-connaître enfin le travail de développeur en entreprise et je dois dire
-que cela me plait beaucoup, cependant ce n'est pas toujours évident.
-Bloquer sur un problème toute la journée sans avancer est très pénible
+progression que m'ont apportés ces stages. Je peux dire en toute
+humilité que j'en ressors grandi.
+
+J'ai pu m'appercevoir que l'entreprise utilisai toujours la technologie
+que j'ai mis en place durant la première année, des modifications ont
+été aportées mais on mon code de base est toujours là ce qui indique une
+certaine qualité dans le travail que j'ai pu accomplir.
+
+J'ai continuer à former les développeurs sur Git pour qu'ils aillent
+toujours plus loin dans l'exploitation de celui-ci. En effet, j'avais
+constaté des la première semaine du deuxième stage que quelques
+principes fondamentaux d'utilisation avait été oubliés. J'ai pu aussi
+leur présenter des nouvelles fonctionnalitées qui sont apparut pendant
+le laps de temps des deux stages. L'usage de base convient dans 90\%{}
+des cas mais certaines particularitées sont toujours bonne à connaitre.
+
+J'ai découvert le travail de développeur en entreprise et je dois dire
+que cela me plait, cependant ce n'est pas toujours évident.  Bloquer sur
+un problème toute la journée sans avancer est très pénible
 intellectuellement, j'ai connu beaucoup de maux de tête et de matins
 difficiles. Travailler toute la journée à concevoir des algorithmes est
-éprouvant, et encore je ne subissais aucune pression quant à ma
-productivité\dots
+parfois éprouvant\dots
 
 J'ai été très satisfait des échanges que j'ai pu avoir avec l'équipe.
 Développer est une chose mais proposer, débattre, trouver les meilleures
@@ -21,10 +31,10 @@ solutions sont ce que j'ai préféré. L'entreprise m'a beaucoup apporté,
 mais je pense aussi avoir apporté des choses et c'est très gratifiant.
 
 Cette période m'a prouvé que je ne m'étais pas trompé dans mon
-orientation. Par contre, je suis maintenant indécis pour ma poursuite
-d'étude. Si je continue, ma passion pour les logiciels libres me pousse
-vers la licence professionnelle \og logiciels libres et propriétaires
-pour systèmes, réseaux et bases de données \fg{}, par contre ma force de
-proposition m'orienterait plus vers la \og spécialité assistant chef de
-projet informatique \fg{}.
+orientation. Je souhaite continuer mes études vers une licence
+professionnelle systèmes informatiques et logiciels option \og
+Développement et Administration de sites Internet et Intranet \fg{} qui
+permettra de me spécialiser dans le Web et la sécurité, qui sont des
+marchés porteurs autant dans les entreprises publiques que privées avant
+de m'insérer dans le monde du travail.
 % chapter Conclusion (end)
