--- a/Intro.tex
+++ b/Intro.tex
@@ -4,33 +4,39 @@
 \lettrine{J}{e} m'appelle Julien \bsc{Stechele}, je suis actuellement en
 BTS\, \footnote{\emph{Brevet de Technicien Supérieur.}} informatique de
 gestion option développeur d'applications et dans le cadre de mes études
-j'ai la chance d'effectuer deux stages durant cette formation. Mon stage
-de première année s'est déroulé du 16 mai 2011 au 8 juillet 2011 dans la
-société \emph{IdentIt} ainsi que mon deuxième stage qui lui s'est
-déroulé du 3 janvier 2012 au 21 février 2012. C'est une SARL\,
-\footnote{\emph{Société À Responsabilité Limitée.}} de quatre personnes
-qui se situe à Petite-Synthe. \bsc{M.~Dubourg} et \bsc{M.~Lesage} sont
-les fondateurs de cette structure, le premier s'occupe de la partie
-technique en tant que chef de projet et le second de la partie gestion
-de l'entreprise. Ils sont accompagnés par deux développeurs, l'un
-travaillant sur la partie application sur Windows
-Mobile~\textregistered, l'autre sur la partie internet.
+j'ai eu la chance d'effectuer deux stages durant cette formation. Mon
+stage de première année s'est déroulé du 16 mai 2011 au 8 juillet 2011
+dans la société \emph{IdentIt} ainsi que mon deuxième stage qui lui
+s'est déroulé du 3 janvier 2012 au 21 février 2012.
 
-Mon premier travail consistait à développer un utilitaire pour la partie
-web de comparaison de bases de données qui permetterait d'améliorer le
+C'est une SARL d'édition de logiciels spécialisé dans l'informatique
+industrielle et des systèmes d'identification par radio-fréquence
+RFID\,\footnote{\emph{Radio Frequency IDentification.}}. Elle est
+composée de quatre personnes et se situe depuis peu à Saint Pol sur Mer.
+\bsc{M.~Dubourg} et \bsc{M.~Lesage} sont les fondateurs de cette
+structure, le premier s'occupe de la partie technique en tant que chef
+de projet et le second de la partie gestion de l'entreprise. Ils sont
+accompagnés par deux développeurs, l'un travaillant sur des solutions
+Windows Mobile~\textregistered, l'autre étant plus spécialisé sur le
+développement Web.
+
+Mon premier stage consistait à développer un utilitaire pour la partie
+web de comparaison de bases de données qui permettrait d'améliorer le
 suivi des mises à jour d'une base obsolète à partir d'une base de
 référence et aussi de fournir les requêtes permettant cette mise à jour.
 Mon deuxième travail était de mettre en place un nouvel outil de gestion
 de version de code source plus évolué que l'existant.
 
-Mon deuxième stage, qui est l'objet de cette note de synthèse, consiste
-à continuer le travail précédent sur le gestionnaire de version puis à
-crée un serveur Web dérivée d'un logiciel libre existant pour ensuite le
-déployer avec une application d'IdentIt chez un client, le tout en
-s'accordant avec le système d'information de l'acquéreur.
+Mon deuxième stage, qui est l'objet de cette note de synthèse,
+consistait à continuer le travail précédent sur le gestionnaire de
+version puis à crée un serveur Web dérivée d'un logiciel libre existant
+pour ensuite le déployer avec une application d'\emph{IdentIt} chez un
+client, le tout en s'accordant avec le système d'information de
+l'acquéreur.
 
 Cette note de synthèse suit un plan spécifique, mais les événements ne
-se sont pas passés dans l'ordre réel. En effet, à cause des difficultés
-rencontrées et des problématiques nouvelles données en cours de stage,
-je suis souvent passé d'une réalisation à une autre.
+se sont pas passés forcement dans l'ordre auquel ils sont présentées. En
+effet, à cause des difficultés rencontrées et des problématiques
+nouvelles données en cours de stage, je suis souvent passé d'une
+réalisation à une autre.
 % chapter Introduction (end)
